bg animation small bug fix

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -301,7 +301,7 @@ header {
   background: #5c81e838;
   animation: animate 25s linear infinite;
   // bottom: -150px;
-  top: 70rem;
+  top: 50rem;
 }
 
 .circles li:nth-child(1) {
